PCS/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLUMN
    EQUALS
    LPAREN
    PATHNAME
    RPAREN

Grammar

Rule 0     S' -> calc
Rule 1     calc -> expression
Rule 2     calc -> tableExp
Rule 3     calc -> pathexpr
Rule 4     calc -> receiptexpr
Rule 5     calc -> mainviewexpr
Rule 6     calc -> reportexpr
Rule 7     calc -> empty
Rule 8     id -> FLOAT
Rule 9     id -> STRING
Rule 10    boolean -> TRUE
Rule 11    boolean -> FALSE
Rule 12    expression -> expression MULTIPLY expression
Rule 13    expression -> expression DIVIDE expression
Rule 14    expression -> expression PLUS expression
Rule 15    expression -> expression MINUS expression
Rule 16    expression -> NUMBER
Rule 17    expression -> FLOAT
Rule 18    pathexpr -> PERIOD PERIOD DIVIDE pathexpr
Rule 19    pathexpr -> PERIOD DIVIDE pathexpr
Rule 20    pathexpr -> STRING DIVIDE pathexpr
Rule 21    pathexpr -> STRING DIVIDE filename
Rule 22    filename -> STRING PERIOD STRING
Rule 23    filename -> STRING
Rule 24    receiptexpr -> RECEIPT CLEAR HEAD
Rule 25    receiptexpr -> RECEIPT CLEAR BODY
Rule 26    receiptexpr -> RECEIPT CLEAR FOOTER
Rule 27    receiptexpr -> RECEIPT APPEND STRING TO HEAD
Rule 28    receiptexpr -> RECEIPT APPEND STRING TO BODY
Rule 29    receiptexpr -> RECEIPT APPEND STRING TO FOOTER
Rule 30    mainviewexpr -> VIEW STRING
Rule 31    mainviewexpr -> VIEW SET_SHOP_NAME STRING
Rule 32    mainviewexpr -> VIEW SET_DIMENSION NUMBER COMMA NUMBER
Rule 33    mainviewexpr -> VIEW SET_CART_ROW_SIZE NUMBER
Rule 34    mainviewexpr -> VIEW SET_CART_QUANTITY_ENABLE boolean
Rule 35    mainviewexpr -> VIEW ELEMENT_GRID_ADD path_series
Rule 36    mainviewexpr -> VIEW TABLE_C STRING
Rule 37    path_series -> STRING
Rule 38    path_series -> STRING DIVIDE STRING
Rule 39    tableExp -> TABLE_C STRING column
Rule 40    tableExp -> TABLE_R STRING column
Rule 41    tableExp -> TABLE_C STRING
Rule 42    column -> id
Rule 43    column -> id COMMA column
Rule 44    reportexpr -> item_type_enable boolean
Rule 45    reportexpr -> item_enable boolean
Rule 46    expression -> EXIT
Rule 47    empty -> <empty>

Terminals, with rules where they appear

APPEND               : 27 28 29
BODY                 : 25 28
CLEAR                : 24 25 26
COLUMN               : 
COMMA                : 32 43
DIVIDE               : 13 18 19 20 21 38
ELEMENT_GRID_ADD     : 35
EQUALS               : 
EXIT                 : 46
FALSE                : 11
FLOAT                : 8 17
FOOTER               : 26 29
HEAD                 : 24 27
LPAREN               : 
MINUS                : 15
MULTIPLY             : 12
NUMBER               : 16 32 32 33
PATHNAME             : 
PERIOD               : 18 18 19 22
PLUS                 : 14
RECEIPT              : 24 25 26 27 28 29
RPAREN               : 
SET_CART_QUANTITY_ENABLE : 34
SET_CART_ROW_SIZE    : 33
SET_DIMENSION        : 32
SET_SHOP_NAME        : 31
STRING               : 9 20 21 22 22 23 27 28 29 30 31 36 37 38 38 39 40 41
TABLE_C              : 36 39 41
TABLE_R              : 40
TO                   : 27 28 29
TRUE                 : 10
VIEW                 : 30 31 32 33 34 35 36
error                : 
item_enable          : 45
item_type_enable     : 44

Nonterminals, with rules where they appear

boolean              : 34 44 45
calc                 : 0
column               : 39 40 43
empty                : 7
expression           : 1 12 12 13 13 14 14 15 15
filename             : 21
id                   : 42 43
mainviewexpr         : 5
path_series          : 35
pathexpr             : 3 18 19 20
receiptexpr          : 4
reportexpr           : 6
tableExp             : 2

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . expression
    (2) calc -> . tableExp
    (3) calc -> . pathexpr
    (4) calc -> . receiptexpr
    (5) calc -> . mainviewexpr
    (6) calc -> . reportexpr
    (7) calc -> . empty
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . NUMBER
    (17) expression -> . FLOAT
    (46) expression -> . EXIT
    (39) tableExp -> . TABLE_C STRING column
    (40) tableExp -> . TABLE_R STRING column
    (41) tableExp -> . TABLE_C STRING
    (18) pathexpr -> . PERIOD PERIOD DIVIDE pathexpr
    (19) pathexpr -> . PERIOD DIVIDE pathexpr
    (20) pathexpr -> . STRING DIVIDE pathexpr
    (21) pathexpr -> . STRING DIVIDE filename
    (24) receiptexpr -> . RECEIPT CLEAR HEAD
    (25) receiptexpr -> . RECEIPT CLEAR BODY
    (26) receiptexpr -> . RECEIPT CLEAR FOOTER
    (27) receiptexpr -> . RECEIPT APPEND STRING TO HEAD
    (28) receiptexpr -> . RECEIPT APPEND STRING TO BODY
    (29) receiptexpr -> . RECEIPT APPEND STRING TO FOOTER
    (30) mainviewexpr -> . VIEW STRING
    (31) mainviewexpr -> . VIEW SET_SHOP_NAME STRING
    (32) mainviewexpr -> . VIEW SET_DIMENSION NUMBER COMMA NUMBER
    (33) mainviewexpr -> . VIEW SET_CART_ROW_SIZE NUMBER
    (34) mainviewexpr -> . VIEW SET_CART_QUANTITY_ENABLE boolean
    (35) mainviewexpr -> . VIEW ELEMENT_GRID_ADD path_series
    (36) mainviewexpr -> . VIEW TABLE_C STRING
    (44) reportexpr -> . item_type_enable boolean
    (45) reportexpr -> . item_enable boolean
    (47) empty -> .

    NUMBER          shift and go to state 9
    FLOAT           shift and go to state 10
    EXIT            shift and go to state 11
    TABLE_C         shift and go to state 12
    TABLE_R         shift and go to state 14
    PERIOD          shift and go to state 15
    STRING          shift and go to state 13
    RECEIPT         shift and go to state 16
    VIEW            shift and go to state 17
    item_type_enable shift and go to state 18
    item_enable     shift and go to state 19
    $end            reduce using rule 47 (empty -> .)

    calc                           shift and go to state 1
    expression                     shift and go to state 2
    tableExp                       shift and go to state 3
    pathexpr                       shift and go to state 4
    receiptexpr                    shift and go to state 5
    mainviewexpr                   shift and go to state 6
    reportexpr                     shift and go to state 7
    empty                          shift and go to state 8

state 1

    (0) S' -> calc .



state 2

    (1) calc -> expression .
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . PLUS expression
    (15) expression -> expression . MINUS expression

    $end            reduce using rule 1 (calc -> expression .)
    MULTIPLY        shift and go to state 20
    DIVIDE          shift and go to state 21
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23


state 3

    (2) calc -> tableExp .

    $end            reduce using rule 2 (calc -> tableExp .)


state 4

    (3) calc -> pathexpr .

    $end            reduce using rule 3 (calc -> pathexpr .)


state 5

    (4) calc -> receiptexpr .

    $end            reduce using rule 4 (calc -> receiptexpr .)


state 6

    (5) calc -> mainviewexpr .

    $end            reduce using rule 5 (calc -> mainviewexpr .)


state 7

    (6) calc -> reportexpr .

    $end            reduce using rule 6 (calc -> reportexpr .)


state 8

    (7) calc -> empty .

    $end            reduce using rule 7 (calc -> empty .)


state 9

    (16) expression -> NUMBER .

    MULTIPLY        reduce using rule 16 (expression -> NUMBER .)
    DIVIDE          reduce using rule 16 (expression -> NUMBER .)
    PLUS            reduce using rule 16 (expression -> NUMBER .)
    MINUS           reduce using rule 16 (expression -> NUMBER .)
    $end            reduce using rule 16 (expression -> NUMBER .)


state 10

    (17) expression -> FLOAT .

    MULTIPLY        reduce using rule 17 (expression -> FLOAT .)
    DIVIDE          reduce using rule 17 (expression -> FLOAT .)
    PLUS            reduce using rule 17 (expression -> FLOAT .)
    MINUS           reduce using rule 17 (expression -> FLOAT .)
    $end            reduce using rule 17 (expression -> FLOAT .)


state 11

    (46) expression -> EXIT .

    MULTIPLY        reduce using rule 46 (expression -> EXIT .)
    DIVIDE          reduce using rule 46 (expression -> EXIT .)
    PLUS            reduce using rule 46 (expression -> EXIT .)
    MINUS           reduce using rule 46 (expression -> EXIT .)
    $end            reduce using rule 46 (expression -> EXIT .)


state 12

    (39) tableExp -> TABLE_C . STRING column
    (41) tableExp -> TABLE_C . STRING

    STRING          shift and go to state 24


state 13

    (20) pathexpr -> STRING . DIVIDE pathexpr
    (21) pathexpr -> STRING . DIVIDE filename

    DIVIDE          shift and go to state 25


state 14

    (40) tableExp -> TABLE_R . STRING column

    STRING          shift and go to state 26


state 15

    (18) pathexpr -> PERIOD . PERIOD DIVIDE pathexpr
    (19) pathexpr -> PERIOD . DIVIDE pathexpr

    PERIOD          shift and go to state 27
    DIVIDE          shift and go to state 28


state 16

    (24) receiptexpr -> RECEIPT . CLEAR HEAD
    (25) receiptexpr -> RECEIPT . CLEAR BODY
    (26) receiptexpr -> RECEIPT . CLEAR FOOTER
    (27) receiptexpr -> RECEIPT . APPEND STRING TO HEAD
    (28) receiptexpr -> RECEIPT . APPEND STRING TO BODY
    (29) receiptexpr -> RECEIPT . APPEND STRING TO FOOTER

    CLEAR           shift and go to state 29
    APPEND          shift and go to state 30


state 17

    (30) mainviewexpr -> VIEW . STRING
    (31) mainviewexpr -> VIEW . SET_SHOP_NAME STRING
    (32) mainviewexpr -> VIEW . SET_DIMENSION NUMBER COMMA NUMBER
    (33) mainviewexpr -> VIEW . SET_CART_ROW_SIZE NUMBER
    (34) mainviewexpr -> VIEW . SET_CART_QUANTITY_ENABLE boolean
    (35) mainviewexpr -> VIEW . ELEMENT_GRID_ADD path_series
    (36) mainviewexpr -> VIEW . TABLE_C STRING

    STRING          shift and go to state 31
    SET_SHOP_NAME   shift and go to state 32
    SET_DIMENSION   shift and go to state 33
    SET_CART_ROW_SIZE shift and go to state 34
    SET_CART_QUANTITY_ENABLE shift and go to state 35
    ELEMENT_GRID_ADD shift and go to state 36
    TABLE_C         shift and go to state 37


state 18

    (44) reportexpr -> item_type_enable . boolean
    (10) boolean -> . TRUE
    (11) boolean -> . FALSE

    TRUE            shift and go to state 39
    FALSE           shift and go to state 40

    boolean                        shift and go to state 38

state 19

    (45) reportexpr -> item_enable . boolean
    (10) boolean -> . TRUE
    (11) boolean -> . FALSE

    TRUE            shift and go to state 39
    FALSE           shift and go to state 40

    boolean                        shift and go to state 41

state 20

    (12) expression -> expression MULTIPLY . expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . NUMBER
    (17) expression -> . FLOAT
    (46) expression -> . EXIT

    NUMBER          shift and go to state 9
    FLOAT           shift and go to state 10
    EXIT            shift and go to state 11

    expression                     shift and go to state 42

state 21

    (13) expression -> expression DIVIDE . expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . NUMBER
    (17) expression -> . FLOAT
    (46) expression -> . EXIT

    NUMBER          shift and go to state 9
    FLOAT           shift and go to state 10
    EXIT            shift and go to state 11

    expression                     shift and go to state 43

state 22

    (14) expression -> expression PLUS . expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . NUMBER
    (17) expression -> . FLOAT
    (46) expression -> . EXIT

    NUMBER          shift and go to state 9
    FLOAT           shift and go to state 10
    EXIT            shift and go to state 11

    expression                     shift and go to state 44

state 23

    (15) expression -> expression MINUS . expression
    (12) expression -> . expression MULTIPLY expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . expression PLUS expression
    (15) expression -> . expression MINUS expression
    (16) expression -> . NUMBER
    (17) expression -> . FLOAT
    (46) expression -> . EXIT

    NUMBER          shift and go to state 9
    FLOAT           shift and go to state 10
    EXIT            shift and go to state 11

    expression                     shift and go to state 45

state 24

    (39) tableExp -> TABLE_C STRING . column
    (41) tableExp -> TABLE_C STRING .
    (42) column -> . id
    (43) column -> . id COMMA column
    (8) id -> . FLOAT
    (9) id -> . STRING

    $end            reduce using rule 41 (tableExp -> TABLE_C STRING .)
    FLOAT           shift and go to state 49
    STRING          shift and go to state 46

    column                         shift and go to state 47
    id                             shift and go to state 48

state 25

    (20) pathexpr -> STRING DIVIDE . pathexpr
    (21) pathexpr -> STRING DIVIDE . filename
    (18) pathexpr -> . PERIOD PERIOD DIVIDE pathexpr
    (19) pathexpr -> . PERIOD DIVIDE pathexpr
    (20) pathexpr -> . STRING DIVIDE pathexpr
    (21) pathexpr -> . STRING DIVIDE filename
    (22) filename -> . STRING PERIOD STRING
    (23) filename -> . STRING

    PERIOD          shift and go to state 15
    STRING          shift and go to state 50

    pathexpr                       shift and go to state 51
    filename                       shift and go to state 52

state 26

    (40) tableExp -> TABLE_R STRING . column
    (42) column -> . id
    (43) column -> . id COMMA column
    (8) id -> . FLOAT
    (9) id -> . STRING

    FLOAT           shift and go to state 49
    STRING          shift and go to state 46

    column                         shift and go to state 53
    id                             shift and go to state 48

state 27

    (18) pathexpr -> PERIOD PERIOD . DIVIDE pathexpr

    DIVIDE          shift and go to state 54


state 28

    (19) pathexpr -> PERIOD DIVIDE . pathexpr
    (18) pathexpr -> . PERIOD PERIOD DIVIDE pathexpr
    (19) pathexpr -> . PERIOD DIVIDE pathexpr
    (20) pathexpr -> . STRING DIVIDE pathexpr
    (21) pathexpr -> . STRING DIVIDE filename

    PERIOD          shift and go to state 15
    STRING          shift and go to state 13

    pathexpr                       shift and go to state 55

state 29

    (24) receiptexpr -> RECEIPT CLEAR . HEAD
    (25) receiptexpr -> RECEIPT CLEAR . BODY
    (26) receiptexpr -> RECEIPT CLEAR . FOOTER

    HEAD            shift and go to state 56
    BODY            shift and go to state 57
    FOOTER          shift and go to state 58


state 30

    (27) receiptexpr -> RECEIPT APPEND . STRING TO HEAD
    (28) receiptexpr -> RECEIPT APPEND . STRING TO BODY
    (29) receiptexpr -> RECEIPT APPEND . STRING TO FOOTER

    STRING          shift and go to state 59


state 31

    (30) mainviewexpr -> VIEW STRING .

    $end            reduce using rule 30 (mainviewexpr -> VIEW STRING .)


state 32

    (31) mainviewexpr -> VIEW SET_SHOP_NAME . STRING

    STRING          shift and go to state 60


state 33

    (32) mainviewexpr -> VIEW SET_DIMENSION . NUMBER COMMA NUMBER

    NUMBER          shift and go to state 61


state 34

    (33) mainviewexpr -> VIEW SET_CART_ROW_SIZE . NUMBER

    NUMBER          shift and go to state 62


state 35

    (34) mainviewexpr -> VIEW SET_CART_QUANTITY_ENABLE . boolean
    (10) boolean -> . TRUE
    (11) boolean -> . FALSE

    TRUE            shift and go to state 39
    FALSE           shift and go to state 40

    boolean                        shift and go to state 63

state 36

    (35) mainviewexpr -> VIEW ELEMENT_GRID_ADD . path_series
    (37) path_series -> . STRING
    (38) path_series -> . STRING DIVIDE STRING

    STRING          shift and go to state 65

    path_series                    shift and go to state 64

state 37

    (36) mainviewexpr -> VIEW TABLE_C . STRING

    STRING          shift and go to state 66


state 38

    (44) reportexpr -> item_type_enable boolean .

    $end            reduce using rule 44 (reportexpr -> item_type_enable boolean .)


state 39

    (10) boolean -> TRUE .

    $end            reduce using rule 10 (boolean -> TRUE .)


state 40

    (11) boolean -> FALSE .

    $end            reduce using rule 11 (boolean -> FALSE .)


state 41

    (45) reportexpr -> item_enable boolean .

    $end            reduce using rule 45 (reportexpr -> item_enable boolean .)


state 42

    (12) expression -> expression MULTIPLY expression .
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . PLUS expression
    (15) expression -> expression . MINUS expression

    MULTIPLY        reduce using rule 12 (expression -> expression MULTIPLY expression .)
    DIVIDE          reduce using rule 12 (expression -> expression MULTIPLY expression .)
    PLUS            reduce using rule 12 (expression -> expression MULTIPLY expression .)
    MINUS           reduce using rule 12 (expression -> expression MULTIPLY expression .)
    $end            reduce using rule 12 (expression -> expression MULTIPLY expression .)

  ! MULTIPLY        [ shift and go to state 20 ]
  ! DIVIDE          [ shift and go to state 21 ]
  ! PLUS            [ shift and go to state 22 ]
  ! MINUS           [ shift and go to state 23 ]


state 43

    (13) expression -> expression DIVIDE expression .
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . PLUS expression
    (15) expression -> expression . MINUS expression

    MULTIPLY        reduce using rule 13 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 13 (expression -> expression DIVIDE expression .)
    PLUS            reduce using rule 13 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 13 (expression -> expression DIVIDE expression .)
    $end            reduce using rule 13 (expression -> expression DIVIDE expression .)

  ! MULTIPLY        [ shift and go to state 20 ]
  ! DIVIDE          [ shift and go to state 21 ]
  ! PLUS            [ shift and go to state 22 ]
  ! MINUS           [ shift and go to state 23 ]


state 44

    (14) expression -> expression PLUS expression .
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . PLUS expression
    (15) expression -> expression . MINUS expression

    PLUS            reduce using rule 14 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 14 (expression -> expression PLUS expression .)
    $end            reduce using rule 14 (expression -> expression PLUS expression .)
    MULTIPLY        shift and go to state 20
    DIVIDE          shift and go to state 21

  ! MULTIPLY        [ reduce using rule 14 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 14 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 22 ]
  ! MINUS           [ shift and go to state 23 ]


state 45

    (15) expression -> expression MINUS expression .
    (12) expression -> expression . MULTIPLY expression
    (13) expression -> expression . DIVIDE expression
    (14) expression -> expression . PLUS expression
    (15) expression -> expression . MINUS expression

    PLUS            reduce using rule 15 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 15 (expression -> expression MINUS expression .)
    $end            reduce using rule 15 (expression -> expression MINUS expression .)
    MULTIPLY        shift and go to state 20
    DIVIDE          shift and go to state 21

  ! MULTIPLY        [ reduce using rule 15 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 15 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 22 ]
  ! MINUS           [ shift and go to state 23 ]


state 46

    (9) id -> STRING .

    COMMA           reduce using rule 9 (id -> STRING .)
    $end            reduce using rule 9 (id -> STRING .)


state 47

    (39) tableExp -> TABLE_C STRING column .

    $end            reduce using rule 39 (tableExp -> TABLE_C STRING column .)


state 48

    (42) column -> id .
    (43) column -> id . COMMA column

    $end            reduce using rule 42 (column -> id .)
    COMMA           shift and go to state 67


state 49

    (8) id -> FLOAT .

    COMMA           reduce using rule 8 (id -> FLOAT .)
    $end            reduce using rule 8 (id -> FLOAT .)


state 50

    (20) pathexpr -> STRING . DIVIDE pathexpr
    (21) pathexpr -> STRING . DIVIDE filename
    (22) filename -> STRING . PERIOD STRING
    (23) filename -> STRING .

    DIVIDE          shift and go to state 25
    PERIOD          shift and go to state 68
    $end            reduce using rule 23 (filename -> STRING .)


state 51

    (20) pathexpr -> STRING DIVIDE pathexpr .

    $end            reduce using rule 20 (pathexpr -> STRING DIVIDE pathexpr .)


state 52

    (21) pathexpr -> STRING DIVIDE filename .

    $end            reduce using rule 21 (pathexpr -> STRING DIVIDE filename .)


state 53

    (40) tableExp -> TABLE_R STRING column .

    $end            reduce using rule 40 (tableExp -> TABLE_R STRING column .)


state 54

    (18) pathexpr -> PERIOD PERIOD DIVIDE . pathexpr
    (18) pathexpr -> . PERIOD PERIOD DIVIDE pathexpr
    (19) pathexpr -> . PERIOD DIVIDE pathexpr
    (20) pathexpr -> . STRING DIVIDE pathexpr
    (21) pathexpr -> . STRING DIVIDE filename

    PERIOD          shift and go to state 15
    STRING          shift and go to state 13

    pathexpr                       shift and go to state 69

state 55

    (19) pathexpr -> PERIOD DIVIDE pathexpr .

    $end            reduce using rule 19 (pathexpr -> PERIOD DIVIDE pathexpr .)


state 56

    (24) receiptexpr -> RECEIPT CLEAR HEAD .

    $end            reduce using rule 24 (receiptexpr -> RECEIPT CLEAR HEAD .)


state 57

    (25) receiptexpr -> RECEIPT CLEAR BODY .

    $end            reduce using rule 25 (receiptexpr -> RECEIPT CLEAR BODY .)


state 58

    (26) receiptexpr -> RECEIPT CLEAR FOOTER .

    $end            reduce using rule 26 (receiptexpr -> RECEIPT CLEAR FOOTER .)


state 59

    (27) receiptexpr -> RECEIPT APPEND STRING . TO HEAD
    (28) receiptexpr -> RECEIPT APPEND STRING . TO BODY
    (29) receiptexpr -> RECEIPT APPEND STRING . TO FOOTER

    TO              shift and go to state 70


state 60

    (31) mainviewexpr -> VIEW SET_SHOP_NAME STRING .

    $end            reduce using rule 31 (mainviewexpr -> VIEW SET_SHOP_NAME STRING .)


state 61

    (32) mainviewexpr -> VIEW SET_DIMENSION NUMBER . COMMA NUMBER

    COMMA           shift and go to state 71


state 62

    (33) mainviewexpr -> VIEW SET_CART_ROW_SIZE NUMBER .

    $end            reduce using rule 33 (mainviewexpr -> VIEW SET_CART_ROW_SIZE NUMBER .)


state 63

    (34) mainviewexpr -> VIEW SET_CART_QUANTITY_ENABLE boolean .

    $end            reduce using rule 34 (mainviewexpr -> VIEW SET_CART_QUANTITY_ENABLE boolean .)


state 64

    (35) mainviewexpr -> VIEW ELEMENT_GRID_ADD path_series .

    $end            reduce using rule 35 (mainviewexpr -> VIEW ELEMENT_GRID_ADD path_series .)


state 65

    (37) path_series -> STRING .
    (38) path_series -> STRING . DIVIDE STRING

    $end            reduce using rule 37 (path_series -> STRING .)
    DIVIDE          shift and go to state 72


state 66

    (36) mainviewexpr -> VIEW TABLE_C STRING .

    $end            reduce using rule 36 (mainviewexpr -> VIEW TABLE_C STRING .)


state 67
